<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.udacity.shoestore.MainViewModel" />

        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_blue_green"
        android:padding="46dp"
        tools:context=".DetailFragment">

        <TextView
            android:id="@+id/login_shoe_store_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/alata"
            android:text="@string/add_new_shoe"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/shoe_name_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/alata"
            android:text="@string/shoe_name_label"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_shoe_store_title" />

        <EditText
            android:id="@+id/shoe_name_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alata"
            android:hint="@string/shoe_name"
            android:inputType="textPersonName"
            android:text="@={shoe.name}"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textCursorDrawable="@color/white"
            app:backgroundTint="@color/white"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_text_label"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/company_text_label"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alata"
            android:text="@string/company_brand_label"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoe_name_text_input"
            />

        <EditText
            android:id="@+id/company_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/company_brand"
            app:errorEnabled="true"
            app:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:inputType="textPersonName"
            android:fontFamily="@font/alata"
            android:textColor="@color/white"
            android:textCursorDrawable="@color/white"
            android:textAlignment="center"
            android:text="@={shoe.company}"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@id/company_text_label"
            android:autofillHints=""/>

        <TextView
            android:id="@+id/description_text_label"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alata"
            android:text="@string/description_label"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/company_text_input" />

        <EditText
            android:id="@+id/description_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/description"
            app:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:textCursorDrawable="@color/white"
            app:errorEnabled="true"
            android:inputType="textAutoComplete"
            android:textAlignment="center"
            android:text="@={shoe.description}"
            android:fontFamily="@font/alata"
            tools:ignore="MissingConstraints"
            android:autofillHints=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_text_label"/>

        <TextView
            android:id="@+id/size_text_label"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alata"
            android:text="@string/size_label"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_text_input" />

        <EditText
            android:id="@+id/size_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autofillHints=""
            android:hint="@string/size"
            android:textColor="@color/white"
            android:textCursorDrawable="@color/white"
            app:errorEnabled="true"
            android:inputType="number"
            app:backgroundTint="@color/white"
            android:text="@={shoe.size + ``}"
            android:fontFamily="@font/alata"
            android:textAlignment="center"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/size_text_label"/>


        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="@{()-> viewModel.addShoe(shoe)}"
            android:text="@string/add_to_inventory"
            android:textAllCaps="false"
            android:fontFamily="@font/alata"
            app:backgroundTint="@color/white"
            android:textColor="@color/light_blue_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/size_text_input"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:fontFamily="@font/alata"
            app:backgroundTint="@color/cream"
            android:textColor="@color/light_blue_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/save_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
