<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--
    I used the FrameLayout as the main container to hold the single child view,
    in order to stack views on each other - used as it is a fragment.
    -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InstructionsFragment">

        <!--
            I used a ConstraintLayout as I wanted to create a responsive/flexible user interface design.
            Using this layout allows for creating complex layouts, and provides better performance, as well
            as adapting to different screen sizes. It also allows for constraints to be added which help to
            define relationships between views, which helps adaptation towards positioning and sizes for differing
            screens as mentioned. This layout is for the InstructionsFragment.
         -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/purple"
            android:padding="@dimen/login_screen_padding">

            <TextView
                android:id="@+id/shoe_inventory_instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="76dp"
                android:fontFamily="@font/alata"
                android:text="@string/shoe_store_title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/instructions_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alata"
                android:text="@string/shoe_inventory_instructions"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoe_inventory_instructions" />

            <TextView
                android:id="@+id/instructions_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/alata"
                android:text="@string/instructions_subtitle"
                android:textColor="@color/light_blue_green"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/instructions_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/instructions_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/alata"
                android:text="@string/instructions_text"
                android:textColor="@color/cream"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/instructions_subtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/instruction_to_list_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/alata"
                android:text="@string/store_your_shoes_now"
                android:textAllCaps="false"
                android:textColor="@color/purple"
                app:backgroundTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/instructions_text"
                app:layout_constraintVertical_bias="0.05" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</layout>

