<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--
    I used the FrameLayout as the main container to hold the single child view,
    in order to stack views on each other - used as it is a fragment.
    -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginFragment">

        <!--
              I used a ConstraintLayout as I wanted to create a responsive/flexible user interface design.
              Using this layout allows for creating complex layouts, and provides better performance, as well
              as adapting to different screen sizes. It also allows for constraints to be added which help to
              define relationships between views, which helps adaptation towards positioning and sizes for differing
              screens as mentioned. This layout is for the LoginFragment.
        -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/purple"
            android:padding="@dimen/login_screen_padding">

            <TextView
                android:id="@+id/login_shoe_store_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="140dp"
                android:fontFamily="@font/alata"
                android:text="@string/shoe_store_title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/email_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/alata"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                app:errorEnabled="true"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_shoe_store_title"
                app:backgroundTint="@color/white"
                android:textCursorDrawable="@color/white"
                android:autofillHints="" />

            <EditText
                android:id="@+id/company_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/password"
                android:fontFamily="@font/alata"
                android:inputType="textPassword"
                android:textColor="@color/white"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_text_input"
                android:autofillHints="Password"
                app:backgroundTint="@color/white"
                android:textCursorDrawable="@color/white"/>

            <Button
                android:id="@+id/login_button"
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/alata"
                android:text="@string/login"
                app:backgroundTint="@color/white"
                android:textColor="@color/purple"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/company_text_input" />

            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:fontFamily="@font/alata"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                app:backgroundTint="@color/light_blue_green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>
